--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="navbar">
       <a href="./index.html" class="logo">
-        <img src="/assets/img/logo.svg" alt="Logo"></a>
+        <img src="assets/img/logo.svg" alt="Logo"></a>
       <nav class="navbar-nav">
         <ul class="navbar-menu">
           <li class="navbar-item">
