add main-info block

--- a/index.html
+++ b/index.html
@@ -78,11 +78,20 @@
     </div>
     <!-- /.main-image -->
     <div class="main-info">
-      <h2 class="main-title">Выберете желаемый этаж
-        <button class="counter-button counter-up"></button>
+      <h2 class="main-title">Выберете желаемый этаж</h2>
+      <div class="counter-group">
+        <button class="counter-button counter-up">
+          <img src="assets/img/arrow.svg" alt="arrow-up" class="count-arrow-up">
+        </button>
         <span class="counter">02</span>
-        <button class="counter-button counter-down"></button>
-      </h2>
+        <button class="counter-button counter-down">
+          <img src="assets/img/arrow.svg" alt="arrow-up" class="count-arrow-down">
+        </button>
+      </div>
+      <!-- /.counter-group -->
+      <button class="button button-primary">
+        Смотреть квартиры на этаже
+      </button>
     </div>
     <!-- /.main-info -->
   </main>
