--- a/index.html
+++ b/index.html
@@ -112,6 +112,35 @@
     </div>
     <!-- /.main-info -->
   </main>
+
+  <footer class="footer">
+    <div class="footer-bar">
+      <img src="/assets/img/footerlogo.png" alt="" class="footer-logo">
+      <div class="footer-contacts">
+        <span class="footer-text">Заказать звонок:</span>
+        <a href="" class="footer-phone">8(800)322-22-33</a>
+      </div>
+      <nav class="imagebox">
+        <a href="" class="imagebox-link"><img src="/assets/img/facebook.svg" alt=""></a>
+        <a href="" class="imagebox-link"><img src="/assets/img/instagram.svg" alt=""></a>
+        <a href="" class="imagebox-link"><img src="/assets/img/twitter.svg" alt=""></a>
+        <a href="" class="imagebox-link"><img src="/assets/img/youtube.svg" alt=""></a>
+
+      </nav>
+      <nav class="footerbar-nav">
+        <ul class="footerbar-menu">
+          <li class="footerbar-item">
+            <a href="#" class="footer-link">Политика конфиденциальности</a></li>
+          <li class="footerbar-item">
+            <a href="#" class="footer-link">Публичная оферта</a></li>
+          <li class="footerbar-item">
+            <a href="#" class="footer-link">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
