--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
 
   <footer class="footer">
     <div class="footer-bar">
-      <img src="/assets/img/footerlogo.png" alt="" class="footer-logo">
+      <a href="index.html">
+        <img src="/assets/img/footerlogo.png" alt="" class="footer-logo">
+      </a>
+
       <div class="footer-contacts">
         <span class="footer-text">Заказать звонок:</span>
         <a href="" class="footer-phone">8(800)322-22-33</a>
