add footer logo

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <footer class="footer">
     <div class="footer-bar">
       <a href="index.html">
-        <img src="/assets/img/footerlogo.png" alt="" class="footer-logo">
+        <img src="assets/img/footerlogo.png" alt="" class="footer-logo">
       </a>
 
       <div class="footer-contacts">
