--- a/index.html
+++ b/index.html
@@ -115,8 +115,41 @@
 
   <div class="modal">
     <div class="modal-dialog">
-      <div class="modal-image"></div>
-      <div class="modal-info"></div>
+      <button class="modal-close-button">
+        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2 2L26 26" stroke="#3596F5" stroke-width="3" />
+          <path d="M26 2L2 26" stroke="#3596F5" stroke-width="3" />
+        </svg>
+
+      </button>
+
+      <div class="modal-image">
+        <h3 class="modal-title">Этаж <span class="madal-counter">07</span></h3>
+        <img src="assets/img/floor.png" alt="">
+      </div>
+      <div class="modal-info">
+        <h3 class="modal-title">Выберете квартиру</h3>
+        <ul class="flat-list">
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item">
+            <a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a>
+          </li>
+          <li class="flat-item">
+            <a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a>
+          </li>
+          <li class="flat-item">
+            <a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a>
+          </li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+          <li class="flat-item"><a href="" class="flat-link">кв. 40 2 комн. 50 кв. м.</a></li>
+        </ul>
+
+        <p class="modal-alert">Квартиры отмеченные серым,<br>уже выкуплены</p>
+      </div>
     </div>
     <!-- /.modal-dialog -->
   </div>
