add button active

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
         <button class="counter-button counter-up">
           <img src="assets/img/arrow.svg" alt="arrow-up" class="count-arrow-up">
         </button>
-        <span class="counter">02</span>
+        <span class="floor-counter counter">02</span>
         <button class="counter-button counter-down">
           <img src="assets/img/arrow.svg" alt="arrow-up" class="count-arrow-down">
         </button>
       </div>
       <!-- /.counter-group -->
-      <button class="button button-primary">
+      <button class="button button-primary view-flats">
         Смотреть квартиры на этаже
       </button>
     </div>
@@ -124,7 +124,7 @@
       </button>
 
       <div class="modal-image">
-        <h3 class="modal-title">Этаж <span class="madal-counter">07</span></h3>
+        <h3 class="modal-title">Этаж <span class="madal-counter counter">07</span></h3>
         <svg class="flats" width="433" height="408" viewBox="0 0 433 408" fill="none" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink">
           <image id="image0" width="433" height="408" xlink:href="assets/img/floor.png" />
